<!--
  ~ Copyright (c) 2019. All rights reserved.
  ~
  ~ Author: Samsruti Dash ( sam.sipun@gmail.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<resources>
    <string name="app_name">Google I/O Extended 2019</string>
    <string name="payment_settings">Payment Settings</string>
    <string name="logout">Logout</string>
    <string name="footer_content">Made In ♥️ By Samsruti</string>
    <string name="username_email">Username/ Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="_19_extended">19 extended</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="content_desc">Logo Google IO 2019 Extended</string>
    <string name="click_animate_text">Click on the <b> Logo</b> to Animate</string>
</resources>
