<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019. All rights reserved.
  ~
  ~ Author: Samsruti Dash ( sam.sipun@gmail.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="1dp"
            android:contentDescription="@string/content_desc"
            app:layout_constraintBottom_toTopOf="@+id/extended_textView"
            app:layout_constraintEnd_toStartOf="@+id/footer"
            app:layout_constraintStart_toStartOf="@+id/left_margin_guideline"
            app:layout_constraintTop_toTopOf="@+id/footer"
            app:srcCompat="@drawable/io_logo" />


        <TextView
            android:id="@+id/footer"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/footer_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/right_margin_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_margin_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_margin_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/center_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/extended_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/_19_extended"
            android:textColor="#FBC02D"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/footer"
            app:layout_constraintEnd_toEndOf="@+id/logo"
            app:layout_constraintStart_toStartOf="@+id/logo"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>